# SimusNeuroblas

./: AUTHORS  CMakeLists.txt  INSTALL  Launch_R_data1.py  Launch_cancer1.py  Makefile  README.md  cmake_install.cmake  cmake_uninstall.cmake  param.in  param_diffusive_1_1.in  param_diffusive_1_2.in  param_diffusive_1_3.in  param_diffusive_1_4.in  param_diffusive_1_5.in  plot_index.py  resol.sh
cmake/: cmake_generate_header.cmake
doc/: simuscale.conf
doc/dev/: HowToAddFormalism.md  cppguide.html  doxygen.conf
examples/ODE_stem_niche/: GeneInteractionsMatrix.txt  cyclingparam.txt
run/: .gitignore
run/cancer/: .GeneInteractionsMatrix.txt.swp  .Test_110.txt.swp  .index.R.swp  .initial_position_110.txt.swp  .initial_position_110_y.txt.swp  .normalization.txt.swp  .out_110.txt.swo  .out_110.txt.swp  .param.in.swn  .param.in.swo  .param.in.swp  .phylogeny_ID.txt.swo  .trajectory.txt.swi  .trajectory.txt.swl  .trajectory.txt.swm  .trajectory.txt.swo  .y_110.txt.swg  .y_110.txt.swh  .y_110.txt.swi  .y_110.txt.swj  .y_110.txt.swk  .y_110.txt.swl  .y_110.txt.swm  .y_110.txt.swn  .y_110.txt.swo  .y_110.txt.swp  .y_110@.swp  GeneInteractionsMatrix.txt  Pop_type.py  cell1.txt  cell615.txt  data.txt  index.R  initial_position_110.txt  initial_position_110_y.txt  intra_coefficient.py  kineticsparam.txt  newick.tree  normalization_cancer.txt  out_110.txt  (+6 more)
run/example_spiky/: .normalization.txt.swp  .param.in.swp  .trajectory.txt.swp  ctreesvg.c  ctreesvg.out  newick.tree  param.in  treelist.tgf
run/lymphocytes/: .param.in.swo  .param.in.swp  GenesPlot.py  SimuscaleJobTS.sh  WriteResults.py  kineticsparam.txt  param.in  visu3D.py
run/lymphocytes/archive/: param.in
src/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  main.cpp
src/lineagetree/: CMakeLists.txt  lineagetree.cpp  tags
src/plugins/: #Cancer.cpp#  #Cancer.h#  .Cancer..swp  .Cancer.cpp.swj  .Cancer.cpp.swn  .Cancer.cpp.swo  .Cancer.cpp.swp  .Cell_Killer.cpp.swp  Cancer.cpp  Cancer.h  Cancer_No_Diffusion.cpp  Cancer_No_Diffusion.h  Cell_Boilerplate.cpp  Cell_Boilerplate.h  Cell_Hemato.cpp  Cell_Hemato.h  Cell_Killer.cpp  Cell_Killer.h  Cell_Spiky.cpp  Cell_Spiky.h  Cell_SyncClock.cpp  Cell_SyncClock.h  Lymphocyte.cpp  Lymphocyte.h
src/populate/: CMakeLists.txt  populate.cpp  populate.h
src/simuscale-core/: .#Cell.cpp  .#WorldSize.cpp  .#WorldSize.h  .CMakeLists.txt.swp  .Cell.h.swp  .CellType.h.in.swp  .CellType.values.in.swo  .CellType.values.in.swp  .Simulation.cpp.swp  Alea.cpp  Alea.h  Boilerplate_class.cpp  Boilerplate_class.h  CMakeLists.txt  Cell.cpp  Cell.h  CellSize.cpp  CellSize.h  CellTree.cpp  CellTree.h  CellType.h  CellType.h.in  CellType.values.in  Coordinates.h  Coordinates.hpp  Grid.cpp  Grid.h  InterCellSignal.h  InterCellSignal.h.in  InterCellSignal.values.in  InterCellSignal.values_save.in  InterCellSignals.cpp  InterCellSignals.h  Makefile  Observable.cpp  Observable.h  ObservableEvent.h  Observer.h  OutputManager.cpp  OutputManager.h  (+7 more)
src/simuscale-core/fgt/: Box3.cpp  Box3.h  FastGaussTransform3D.cpp  FastGaussTransform3D.h  Hermite.cpp  Hermite.h
src/simuscale-core/movement/: .Mobile.cpp.swp  .Motile.cpp.swo  .Motile.cpp.swp  Immobile.cpp  Immobile.h  Mobile.cpp  Mobile.h  Motile.cpp  Motile.h  MoveBehaviour.cpp  MoveBehaviour.h
src/simuscale-core/params/: .CellParams.h.swp  .SimulationParams.cpp.swp  .SimulationParams.h.swp  CellParams.h  NicheParams.h  ParamFileReader.cpp  ParamFileReader.h  PopulationParams.h  SimulationParams.cpp  SimulationParams.h  WorldSizeParams.h
src/tests/: CMakeLists.txt  Cell_SyncClock_test.cpp  Simulation_test.cpp  cpplint.py  test_Cell.cpp  test_param_loader.cpp
src/tests/data/: param.in
src/tests/integration_tests/: .gitignore  CMakeLists.txt  reprod_test.sh  simple_test.sh
src/tests/integration_tests/ODE_stem_niche_reprod/: param.in
src/tests/integration_tests/ODE_stem_niche_small/ref/: param.in
src/tests/integration_tests/ODE_stem_niche_small/result/: .gitignore
src/view/: #view.cpp#  .#view.cpp  .view.cpp.swm  .view.cpp.swn  .view.cpp.swo  .view.cpp.swp  .view_cancer.cpp.swp  CMakeLists.txt  colormap.c  colormap.h  view.cpp  view.h
src/view_cancer/: .view_cancer.cpp.swn  .view_cancer.cpp.swo  .view_cancer.cpp.swp  CMakeLists.txt  view_cancer.cpp
